fix #264